# calum-ml-cardest

./: .gitignore  README.md  pyproject.toml  requirements.txt
krypton_utils/: devmind.py  devmind_create_table.sql  devmind_stats.json  tpcds.py  tpcds_create_table.sql  tpcds_stats.json  tpch.py  tpch_stats.json
preprocess/: devmind_data_convert.py  process_data_files.sh  process_input_features.py  tpcds_data_convert.py  tpch_data_convert.py  zs_simple_data_cleaning.py
src/: calculate_uncertainty.py
src/grasp/: LICENSE  README.md  query_optimization.py  train_grasp_tpcds.py  train_grasp_tpch.py  utils.py
src/grasp/GRASP/: ce_models.py  join_handler_ceb.py  join_handler_dsb.py  lcs_models.py  utils.py
src/grasp/arcdf/transforms/: __init__.py  autoregressive.py  base.py  linear.py  made.py
src/grasp/arcdf/utils/: torchutils.py  torchutils_test.py
src/grasp/queries/: column_min_max_vals_tpcds.csv  column_min_max_vals_tpch.csv  tpcds_test.csv  tpch.csv
src/grasp/tpcds_utilities/: join_utilits_tpcds.py
src/grasp/tpch_utilities/: NeuroCDF_helpers.py  join_utilits_tpch.py
src/mscn/: train.py
src/mscn/data/: column_min_max_vals_tpch.csv
src/mscn/mscn/: data.py  model.py  util.py
src/mscn/results/: predictions_tpcds.csv  predictions_tpch.csv
src/mscn/workloads/: tpch_test.csv
src/zs-devmind/: train.py
src/zs-devmind/models/preprocessing/: feature_statistics.py
src/zs-devmind/models/training/: train.py
src/zs-devmind/models/zero_shot_models/: zero_shot_model.py
src/zs-tpcds/: train.py
src/zs-tpch/: train.py
(+23 files in other folders)
