[project]
name = "calum-ml-cardest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "dataclasses>=0.8",
    "dgl==0.9.0",
    "filelock>=3.19.1",
    "func-timeout>=4.3.5",
    "gensim>=4.3.3",
    "glog>=0.3.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mako>=1.3.10",
    "matplotlib>=3.10.5",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "optuna>=4.5.0",
    "osfclient>=0.0.5",
    "pandas>=2.3.1",
    "paramiko>=4.0.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic==2.11.7",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.13.1",
    "scp>=0.15.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch==2.0.0",
    "torchdata==0.6.0",
    "torchvision==0.15.1",
    "tqdm>=4.67.1",
    "yapf>=0.43.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

